--- a/lab07_integ/tb/xcelium.d/history
+++ b/lab07_integ/tb/xcelium.d/history
@@ -5,3 +5,4 @@
 s1::(23Sep2024:13:36:50):( xrun -f run.f )&&(./xcelium.d/env.d/env.history.23Sep2024_13_36_50)
 s2::(23Sep2024:13:37:40):( xrun -f run.f )&&(./xcelium.d/env.d/env.history.23Sep2024_13_37_40)
 s3::(23Sep2024:13:42:36):( xrun -f run.f )&&(./xcelium.d/env.d/env.history.23Sep2024_13_42_36)
+s4::(23Sep2024:19:45:57):( xrun -f run.f )&&(./xcelium.d/env.d/env.history.23Sep2024_19_45_57)
